# CS149-Learning

./: .gitignore
Assignment1/: ISPC_Excecution_Model.md  README.md
Assignment1/prog2_vecintrin/: CS149intrin.h  Makefile  main.cpp  myexp
Assignment1/prog3_mandelbrot_ispc/: main.cpp  mandelbrot.ispc  mandelbrot_ispc
Assignment1/prog4_sqrt/: Makefile  main.cpp  sqrt  sqrt.ispc  sqrtAVX.cpp
Assignment1/prog5_saxpy/: ans.md  main.cpp  saxpy  saxpy.ispc
Assignment1/prog6_kmeans/: kmeans  kmeansThread.cpp  main.cpp  plot.py  record.md
Assignment2/: README-zh.md  README.md  a.out  test.cpp
Assignment2/part_a/: Makefile  compile_commands.json  itasksys.h  runtasks  tasksys.cpp  tasksys.h
Assignment2/tests/: README-zh.md
Assignment2/tutorial/: README-zh.md
Assignment3/saxpy/: CMakeLists.txt  Makefile  build.sh  compile_commands.json  cudaSaxpy  main.cpp  saxpy.cu
Assignment3/scan/: Makefile  README.md  build.sh  compile_commands.json  cudaScan  main.cpp  report.md  scan.cu  test.cpp
Assignment3/scan/.cache/clangd/index/: CycleTimer.h.B82D2DD9B0858233.idx  scan.cu.43F0BF761433E32F.idx
Assignment3/scan/scripts/: build.sh
Assignment3/tutor/: build.sh  main.cpp
Assignment3/tutor/cuda/: CMakeLists.txt  foo.cu
Assignment3/tutor/scripts/: build.sh
asst1/prog2_vecintrin/: main.cpp
cs149-asst1/prog1_mandelbrot_threads/: mandelbrotThread.cpp
cs149-asst1/prog2_vecintrin/: myexp  note.md
